Update for 3.0.1. Fix desktop category to Multimedia.

--- a/google-play-music-desktop-player.desktop
+++ b/google-play-music-desktop-player.desktop
@@ -6,5 +6,5 @@ Exec=google-play-music-desktop-player %U
 Icon=google-play-music-desktop-player
 Type=Application
 StartupNotify=true
-Categories=GNOME;GTK;Utility;
+Categories=GNOME;GTK;Multimedia;
 MimeType=text/plain;
