--- a/firefox-nightly.desktop
+++ b/firefox-nightly.desktop
@@ -89,7 +89,7 @@ Icon=firefox-nightly-icon
 Categories=Network;WebBrowser;
 MimeType=text/html;text/xml;application/xhtml+xml;application/vnd.mozilla.xul+xml;text/mml;x-scheme-handler/http;x-scheme-handler/https;x-scheme-handler/ftp;
 StartupNotify=true
-Actions=NewTab;NewWindow;NewPrivateWindow;
+Actions=NewTab;NewWindow;NewPrivateWindow;SafeMode
 
 [Desktop Action NewTab]
 Name=Open new tab
@@ -351,3 +351,9 @@ Name[xh]=Ifestile yangasese entsha
 Name[zh_CN]=新建隐私浏览窗口
 Name[zh_TW]=新增隱私視窗
 Exec=firefox-nightly -private-window
+
+[Desktop Action SafeMode]
+Name=Safe Mode
+Name[ru]=Безопасный режим
+Exec=firefox-nightly -safe-mode %u
+
