Correct dkms.conf

--- a/dkms.conf
+++ b/dkms.conf
@@ -1,4 +1,4 @@
-PACKAGE_NAME="moxa-uport11x0-git"
+PACKAGE_NAME="@_PKGBASE@"
 PACKAGE_VERSION="@PKGVER@"
 BUILT_MODULE_NAME[0]="mxu11x0"
 DEST_MODULE_LOCATION[0]="/kernel/drivers/misc"
