Register hifi:// protocol for Interface, use xdg-desktop-menu to install .desktop entry, bump pkgver

--- a/hifi-interface.desktop
+++ b/hifi-interface.desktop
@@ -6,4 +6,5 @@ Exec=/opt/hifi/interface/interface
 Icon=/usr/share/pixmaps/hifi-interface.png
 Terminal=false
 StartupNotify=true
-Categories=Network;Game;3DGraphics;Qt
+Categories=Network;Game;3DGraphics
+MimeType=x-scheme-handler/hifi;
