fix apache conf

--- a/apache.example.conf
+++ b/apache.example.conf
@@ -3,6 +3,7 @@ Alias /owncloud "/usr/share/webapps/owncloud"
 <Directory /usr/share/webapps/owncloud/>
   Options +FollowSymlinks
   AllowOverride All
+  Require all granted
 
  <IfModule mod_dav.c>
   Dav off
