--- a/zeronet.service
+++ b/zeronet.service
@@ -4,7 +4,7 @@ Description=ZeroNet: a decentralized web platform
 [Service]
 User=zeronet
 Group=zeronet
-WorkingDirectory=~
+WorkingDirectory=/opt/zeronet
 ExecStart=/usr/bin/env python2 zeronet.py --config_file /etc/zeronet.conf
 Restart=on-failure
 
