--- a/brave-browser-bin.desktop
+++ b/brave-browser-bin.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Version=1.0
-Name=Brave Browser (binary version)
+Name=Brave Browser (bin)
 # Only KDE 4 seems to use GenericName, so we reuse the KDE strings.
 # From Ubuntu's language-pack-kde-XX-base packages, version 9.04-20090413.
 GenericName=Web Browser
@@ -105,8 +105,8 @@ Comment[vi]=Truy cập Internet
 Comment[zh_CN]=访问互联网
 Comment[zh_HK]=連線到網際網路
 Comment[zh_TW]=連線到網際網路
-StartupWMClass=brave-browser-bin
-Exec=/usr/bin/brave-browser-bin %U
+StartupWMClass=Brave
+Exec=/usr/bin/env LD_LIBRARY_PATH="/opt/brave-browser-bin:/usr/lib" /opt/brave-browser-bin/Brave %U
 Terminal=false
 Icon=brave-browser-bin
 Type=Application
