--- a/brave-browser-bin.desktop
+++ b/brave-browser-bin.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Version=1.0
-Name=Brave Browser (bin)
+Name=Brave (bin)
 # Only KDE 4 seems to use GenericName, so we reuse the KDE strings.
 # From Ubuntu's language-pack-kde-XX-base packages, version 9.04-20090413.
 GenericName=Web Browser
@@ -105,7 +105,9 @@ Comment[vi]=Truy cập Internet
 Comment[zh_CN]=访问互联网
 Comment[zh_HK]=連線到網際網路
 Comment[zh_TW]=連線到網際網路
+StartupNotify=yes
 StartupWMClass=Brave
+TryExec=/opt/brave-browser-bin/Brave
 Exec=/usr/bin/env LD_LIBRARY_PATH="/opt/brave-browser-bin:/usr/lib" /opt/brave-browser-bin/Brave %U
 Terminal=false
 Icon=brave-browser-bin
