--- a/app_new.ini
+++ b/app_new.ini
@@ -93,6 +93,8 @@ KEY_FILE = custom/https/key.pem
 ; Upper level of template and static file path
 ; default is the path where Gogs is executed
 STATIC_ROOT_PATH = /usr/share/themes/gogs/default
+; Default path for App data
+APP_DATA_PATH = /srv/gogs/data
 ; Application level GZIP support
 ENABLE_GZIP = false
 ; Landing page for non-logged users, can be "home" or "explore"
@@ -202,7 +204,7 @@ PROVIDER = memory
 ; file: session file path, e.g. `data/sessions`
 ; redis: network=tcp,addr=:6379,password=macaron,db=0,pool_size=100,idle_timeout=180
 ; mysql: go-sql-driver/mysql dsn config string, e.g. `root:password@/session_table`
-PROVIDER_CONFIG = /srv/gogs/sessions
+PROVIDER_CONFIG = /srv/gogs/data/sessions
 ; Session cookie name
 COOKIE_NAME = i_like_gogits
 ; If you use session in https only, default is false
