Addressing some concerns of FadeMind.
The makepkg.conf included here represents some of my own
configuration choices. It is not intended to stay here however;
once the next version of pacman rolls out, I intend to import
users' own makepkg.conf (and makepkg) for the basis to patch on.

--- a/makepkg.conf
+++ b/makepkg.conf
@@ -22,7 +22,7 @@ DLAGENTS=( #'ftp::/usr/bin/aria2c --conf-path=/etc/aria2/aria2.conf --ftp-pasv %
 # /usr/bin/lftpget -c
 # /usr/bin/wget
 
-#-- The the package required by makepkg to download VCS sources
+#-- The package required by makepkg to download VCS sources
 #  Format: 'protocol::package'
 VCSCLIENTS=('bzr::bzr'
             'git::git'
@@ -130,8 +130,8 @@ PURGE_TARGETS=(usr/{,share}/info/dir .packlist *.pod)
 #
 COMPRESSGZ=(gzip -c -f -n --best)
 COMPRESSBZ2=(bzip2 -c -f --best)
-COMPRESSXZ=(xz -c -z -)
-COMPRESSLRZ=(lrzip -q)
+COMPRESSXZ=(xz -T "$(getconf _NPROCESSORS_ONLN)" -c -z --best -e -)
+COMPRESSLRZ=(lrzip -M -q)
 COMPRESSLZO=(lzop -q --best)
 COMPRESSZ=(compress -c -f)
 
