Most people probably don't want -e for xz; takes time.

--- a/makepkg.conf
+++ b/makepkg.conf
@@ -130,8 +130,8 @@ PURGE_TARGETS=(usr/{,share}/info/dir .packlist *.pod)
 #
 COMPRESSGZ=(gzip -c -f -n --best)
 COMPRESSBZ2=(bzip2 -c -f --best)
-COMPRESSXZ=(xz -T "$(getconf _NPROCESSORS_ONLN)" -c -z --best -e -)
-COMPRESSLRZ=(lrzip -M -q)
+COMPRESSXZ=(xz -T "$(getconf _NPROCESSORS_ONLN)" -c -z --best -)
+COMPRESSLRZ=(lrzip -9 -q)
 COMPRESSLZO=(lzop -q --best)
 COMPRESSZ=(compress -c -f)
 
