--- a/makepkg.conf
+++ b/makepkg.conf
@@ -33,8 +33,8 @@ VCSCLIENTS=('bzr::bzr'
 # ARCHITECTURE, COMPILE FLAGS
 #########################################################################
 #
-CARCH="x86_64"
-CHOST="x86_64-unknown-linux-gnu"
+CARCH="@ARCH@"
+CHOST="@HOST@"
 
 #-- Compiler and Linker Flags
 # -march (or -mcpu) builds exclusively for an architecture
