--- a/ibcontroller@.service
+++ b/ibcontroller@.service
@@ -11,7 +11,7 @@ Group=root
 KillMode=control-group
 
 ExecStartPre=/bin/sh -c "mkdir -p /var/run/xvfb"
-ExecStart=/usr/sbin/xvfb-run --auto-servernum -f /var/run/xvfb/%I java -cp /usr/share/java/ib-tws/jts.jar:/usr/share/java/ib-tws/total.jar:/usr/share/java/ibcontroller/ibcontroller.jar -Xmx512M ibcontroller.IBGatewayController /etc/ibcontroller/%I.ini
+ExecStart=/usr/sbin/xvfb-run --auto-servernum -f /var/run/xvfb/%I java -cp /usr/share/java/ib-tws/*:/usr/share/java/ibcontroller/ibcontroller.jar -Xmx512M ibcontroller.IBGatewayController /etc/ibcontroller/%I.ini
 
 [Install]
 WantedBy=multi-user.target
