--- a/r.desktop
+++ b/r.desktop
@@ -2,9 +2,8 @@
 Name=R
 GenericName=environment for statistical computing
 Comment=language and environment for statistical computing and graphics
-Exec=R
-Icon=/usr/share/pixmaps/r.png
-DocPath=/usr/lib/R/doc/html/index.html
+Exec=R-devel
+Icon=/usr/share/pixmaps/r-devel.png
 StartupNotify=true
 Terminal=true
 Type=Application
