Introduce qcec dependency
Change-Id: Icb87df41a64851094b4ea560f564b671ee0c342a

--- a/pi-launcher@.service
+++ b/pi-launcher@.service
@@ -11,7 +11,7 @@ User=%i
 WorkingDirectory=~
 TTYPath=/dev/tty7
 PAMName=login
-ExecStart=/opt/pi-compositor/pi-compositor
+ExecStart=-/opt/pi-compositor/pi-compositor -platform eglfs -plugin CECKeyboard
 
 [Install]
 WantedBy=graphical.target
