--- a/sonic-pi-git.desktop
+++ b/sonic-pi-git.desktop
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Type=Application
 Name=Sonic pi
 Comment=A music-centric programming environment, originally built for the raspberry pi.
-Exec=/usr/bin/sonic-pi-git
+Exec=/usr/bin/sonic-pi
 Icon=sonic-pi-git
 Terminal=false
 StartupNotify=false
