--- a/optipng.sh.in
+++ b/optipng.sh.in
@@ -1,6 +1,6 @@
 #!/usr/bin/bash
 #
-#   svgo.sh - Compress SVG files using optsvg
+#   optipng.sh - Compress PNG files using optpng
 #
 #   Copyright (c) 2015-2016 Pacman Development Team <pacman-dev@archlinux.org>
 #
@@ -18,26 +18,26 @@
 #   along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-[[ -n "$LIBMAKEPKG_TIDY_SVGO_SH" ]] && return
-LIBMAKEPKG_TIDY_SVGO_SH=1
+[[ -n "$LIBMAKEPKG_TIDY_OPTIPNG_SH" ]] && return
+LIBMAKEPKG_TIDY_OPTIPNG_SH=1
 
-LIBRARY=${LIBRARY:-'/usr/share/makepkg'}
+LIBRARY=${LIBRARY:-'@libmakepkgdir@'}
 
 source "$LIBRARY/util/message.sh"
 source "$LIBRARY/util/option.sh"
 
 
-packaging_options+=('svgo')
-tidy_modify+=('tidy_svgo')
+packaging_options+=('optipng')
+tidy_modify+=('tidy_optipng')
 
-tidy_svgo() {
-	if check_option "svgo" "y"; then
-		msg2 "$(gettext "Optimizing SVG images...")"
-		local svg
-		find . -type f -iname "*.svg" 2>/dev/null | while read -r svg ; do
-			if [[ $(file --brief --mime-type "$svg") = 'image/svg' ]]; then
-				svgo "${SVGOFLAGS[@]}" "$svg" &>/dev/null ||
-					warning "$(gettext "Could not optimize SVG image : %s")" "${svg/$pkgdir\//}"
+tidy_optipng() {
+	if check_option "optipng" "y"; then
+		msg2 "$(gettext "Optimizing PNG images...")"
+		local png
+		find . -type f -iname "*.png" 2>/dev/null | while read -r png ; do
+			if [[ $(file --brief --mime-type "$png") = 'image/png' ]]; then
+				optipng "${OPTIPNGFLAGS[@]}" "$png" &>/dev/null ||
+					warning "$(gettext "Could not optimize PNG image : %s")" "${png/$pkgdir\//}"
 			fi
 		done
 	fi
