--- a/svgo.sh.in
+++ b/svgo.sh.in
@@ -1,8 +1,8 @@
 #!/usr/bin/bash
 #
-#   upx.sh - Compress package binaries with UPX
+#   svgo.sh - Compress SVG files using optsvg
 #
-#   Copyright (c) 2011-2016 Pacman Development Team <pacman-dev@archlinux.org>
+#   Copyright (c) 2015-2016 Pacman Development Team <pacman-dev@archlinux.org>
 #
 #   This program is free software; you can redistribute it and/or modify
 #   it under the terms of the GNU General Public License as published by
@@ -18,29 +18,27 @@
 #   along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-[[ -n "$LIBMAKEPKG_TIDY_UPX_SH" ]] && return
-LIBMAKEPKG_TIDY_UPX_SH=1
+[[ -n "$LIBMAKEPKG_TIDY_SVGO_SH" ]] && return
+LIBMAKEPKG_TIDY_SVGO_SH=1
 
-LIBRARY=${LIBRARY:-'/usr/share/makepkg'}
+LIBRARY=${LIBRARY:-'@libmakepkgdir@'}
 
 source "$LIBRARY/util/message.sh"
 source "$LIBRARY/util/option.sh"
 
 
-packaging_options+=('upx')
-tidy_modify+=('tidy_upx')
+packaging_options+=('svgo')
+tidy_modify+=('tidy_svgo')
 
-tidy_upx() {
-	if check_option "upx" "y"; then
-		msg2 "$(gettext "Compressing binaries with %s...")" "UPX"
-		local binary
-		find . -type f -perm -u+w 2>/dev/null | while read -r binary ; do
-			case "$(file --brief --mime-type "$binary")" in
-				'application/x-executable' | 'application/x-dosexec')
-					upx "${UPXFLAGS[@]}" "$binary" &>/dev/null ||
-						warning "$(gettext "Could not compress binary : %s")" "${binary/$pkgdir\//}"
-					;;
-			esac
+tidy_svgo() {
+	if check_option "svgo" "y"; then
+		msg2 "$(gettext "Optimizing SVG images...")"
+		local svg
+		find . -type f -iname "*.svg" 2>/dev/null | while read -r svg ; do
+			if [[ $(file --brief --mime-type "$svg") = 'image/svg' ]]; then
+				svgo "${SVGOFLAGS[@]}" "$svg" &>/dev/null ||
+					warning "$(gettext "Could not optimize SVG image : %s")" "${svg/$pkgdir\//}"
+			fi
 		done
 	fi
 }
