--- a/blender.desktop
+++ b/blender.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=Blender-svn
+Name=Blender-git
 Comment=A 3D program
 Comment[cs]=Program pro 3D modeling a animaci
 Comment[es]=Un programa de 3D
