Add new options to sample INIs

--- a/fdemo.ini
+++ b/fdemo.ini
@@ -1,6 +1,7 @@
 # Options that should be unique to each instantiated service
 IbLoginId=fdemo
 IbPassword=demouser
+TradingMode=live
 ForceTwsApiPort=4002
 IbControllerPort=7463
 IbDir=/var/run/ibcontroller/tws/fdemo
@@ -26,4 +27,7 @@ IbControlFrom=
 IbBindAddress=127.0.0.1
 CommandPrompt=
 SuppressInfoMessages=yes
-
+AcceptNonBrokerageAccountWarning=yes
+ReadOnlyLogin=no
+SaveTwsSettingsAt=
+LogComponents=never
