--- a/edemo.ini
+++ b/edemo.ini
@@ -1,6 +1,7 @@
 # Options that should be unique to each instantiated service
 IbLoginId=edemo
 IbPassword=demouser
+TradingMode=live
 ForceTwsApiPort=4003
 IbControllerPort=7464
 IbDir=/var/run/ibcontroller/tws/edemo
@@ -26,4 +27,7 @@ IbControlFrom=
 IbBindAddress=127.0.0.1
 CommandPrompt=
 SuppressInfoMessages=yes
-
+AcceptNonBrokerageAccountWarning=yes
+ReadOnlyLogin=no
+SaveTwsSettingsAt=
+LogComponents=never
