Corrected .desktop file to use the right image file as well

--- a/gearhead.desktop
+++ b/gearhead.desktop
@@ -4,5 +4,5 @@ Type=Application
 Name=Gearhead
 GenericName=Roguelike Game
 Exec=gearhead
-Icon=/usr/share/pixmaps/gearhead.xpm
+Icon=gearhead
 Categories=Game;RolePlaying
