--- a/dkms.conf
+++ b/dkms.conf
@@ -3,5 +3,5 @@ PACKAGE_VERSION="@VERSION@"
 CLEAN="rm -f *.*o"
 BUILT_MODULE_NAME[0]="fglrx"
 MAKE[0]="sh make.sh --nohints --uname_r=$kernelver --norootcheck"
-DEST_MODULE_LOCATION[0]="/extramodules"
+DEST_MODULE_LOCATION[0]="/kernel/drivers/video"
 AUTOINSTALL="yes"
