--- a/arangodb.service
+++ b/arangodb.service
@@ -20,7 +20,7 @@ PrivateTmp=yes
 Type=forking
 User=arangodb
 Group=arangodb
-PIDFile=/var/run/arangodb3/arangod.pid
+PIDFile=/run/arangodb3/arangod.pid
 # Run ExecStartPre with root-permissions
 PermissionsStartOnly=true
 # ExecStartPre run sequentially
@@ -28,7 +28,7 @@ ExecStartPre=/usr/bin/chown -R arangodb:arangodb /var/log/arangodb3
 ExecStartPre=/usr/bin/chown -R arangodb:arangodb /var/lib/arangodb3
 RuntimeDirectory=arangodb
 RuntimeDirectoryMode=0755
-ExecStart=/usr/bin/arangod -c /etc/arangodb3/arangod.conf --pid-file /var/run/arangodb3/arangod.pid --temp.path /var/tmp/arangod --supervisor
+ExecStart=/usr/bin/arangod -c /etc/arangodb3/arangod.conf --pid-file /run/arangodb3/arangod.pid --temp.path /var/tmp/arangod --supervisor
 
 
 [Install]
