--- a/glassfish-web.service
+++ b/glassfish-web.service
@@ -3,10 +3,10 @@ Description = GlassFish Server v4 - Java EE 7 Web Profile
 After = syslog.target network.target
 
 [Service]
-ExecStart = /usr/bin/java -jar /opt/glassfish4-web/glassfish/lib/client/appserver-cli.jar start-domain
-ExecStop = /usr/bin/java -jar /opt/glassfish4-web/glassfish/lib/client/appserver-cli.jar stop-domain
-ExecReload = /usr/bin/java -jar /opt/glassfish4-web/glassfish/lib/client/appserver-cli.jar restart-domain
 Type = forking
+ExecStart = /opt/glassfish4-web/bin/asadmin start-domain domain1
+ExecStop = /opt/glassfish4-web/bin/asadmin stop-domain domain1
+ExecReload = /opt/glassfish4-web/bin/asadmin restart-domain domain1
 
 [Install]
 WantedBy = multi-user.target
