--- a/factorio-headless.service
+++ b/factorio-headless.service
@@ -8,7 +8,7 @@ User=factorio
 EnvironmentFile=/etc/conf.d/factorio
 WorkingDirectory=/var/lib/factorio
 TimeoutStartSec=5
-ExecStart=/usr/bin/factorio --start-server ${SAVE_NAME}.zip --autosave-interval $AUTOSAVE_INTERVAL --autosave-slots $AUTOSAVE_SLOTS --latency-ms $LATENCY $FACTORIO_EXTRA_ARGS
+ExecStart=/usr/bin/factorio --start-server ${SAVE_NAME}.zip --autosave-interval $AUTOSAVE_INTERVAL --autosave-slots $AUTOSAVE_SLOTS $FACTORIO_EXTRA_ARGS
 TimeoutStopSec=10
 KillSignal=SIGINT
 RestartSec=10
