--- a/mozconfig.in
+++ b/mozconfig.in
@@ -1,18 +1,19 @@
 # general build setup
 mk_add_options PYTHON=/usr/bin/python2
+
+mk_add_options MOZ_CO_PROJECT=browser
+ac_add_options --enable-application=browser
 ac_add_options --enable-official-branding
 export MOZILLA_OFFICIAL=1
-export CC=gcc-5
-export CXX=g++-5
 
 # number of cores your processor has
 mk_add_options MOZ_MAKE_FLAGS="-j8" 
 
 # not necessary if using firejail
-mk_add_options _FORTIFY_SOURCE=0 
+mk_add_options _FORTIFY_SOURCE=2
 
-# march=native and O2 should be about as extreme as you'll ever need
-ac_add_options --enable-optimize="-O2 -march=native"
+# let's do some ricing
+ac_add_options --enable-optimize="-O2 -march=native -mtune=native"
 
 # strip debugging symbols
 ac_add_options --enable-strip
@@ -20,6 +21,7 @@ ac_add_options --enable-strip
 # library and chrome format
 ac_add_options --enable-chrome-format=omni
 ac_add_options --x-libraries=/usr/lib
+ac_add_options --enable-url-classifier
 
 # Use System libraries
 #ac_add_options --enable-default-toolkit=cairo-gtk3 # breaks the build, gtk3 support is not ready
@@ -38,6 +40,9 @@ ac_add_options --enable-system-hunspell
 ac_add_options --enable-system-sqlite
 ac_add_options --enable-system-ffi
 ac_add_options --enable-system-pixman
+ac_add_options --enable-jemalloc
+ac_add_options --with-pthreads
+#ac_add_options --disable-elf-hack
 
 mk_add_options MOZ_CO_PROJECT=browser
 ac_add_options --enable-application=browser
@@ -87,3 +92,6 @@ ac_add_options --disable-b2g-camera
 ac_add_options --disable-mochitests
 ac_add_options --disable-debug
 ac_add_options --disable-debug-symbols
+ac_add_options --disable-codesighs
+ac_add_options --disable-safe-browsing
+ac_add_options --disable-valgrind
