admin php interface v. 1.4

--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -18,6 +18,7 @@ mimetype.assign		= (
 				".jpeg" => "image/jpeg",
 				".gif" => "image/gif",
 				".png" => "image/png",
+				".svg" => "image/svg+xml",	# thanks to nikke
 				"" => "application/octet-stream"
 			)
 
