--- a/factorio-headless.conf
+++ b/factorio-headless.conf
@@ -9,6 +9,6 @@ AUTOSAVE_INTERVAL=10
 AUTOSAVE_SLOTS=3
 
 # Additional factorio arguments
-FACTORIO_EXTRA_ARGS="--disallow-commands --peer-to-peer"
+FACTORIO_EXTRA_ARGS="--allow-commands admins-only"
 
-SAVE_NAME=factorio-service-save
+SAVE_FILE=/var/lib/factorio/.factorio/saves/factorio-service-save.zip
