--- a/factorio-headless.service
+++ b/factorio-headless.service
@@ -7,7 +7,7 @@ After=network.target
 User=factorio
 EnvironmentFile=/etc/conf.d/factorio
 TimeoutStartSec=5
-ExecStart=/usr/bin/factorio --start-server $SAVE_NAME --autosave-interval $AUTOSAVE_INTERVAL --autosave-slots $AUTOSAVE_SLOTS --latency-ms $LATENCY $FACTORIO_EXTRA_ARGS
+ExecStart=/usr/bin/factorio --start-server $SAVE_FILE --autosave-interval $AUTOSAVE_INTERVAL --autosave-slots $AUTOSAVE_SLOTS --latency-ms $LATENCY $FACTORIO_EXTRA_ARGS
 TimeoutStopSec=10
 KillSignal=SIGINT
 RestartSec=10
