--- a/museeks.desktop
+++ b/museeks.desktop
@@ -2,7 +2,7 @@
 Version=0.6.0
 Name=Museeks
 Comment=a free, lightweight and cross-platform music player
-Exec=/opt/museeks/museeks
+Exec=/usr/bin/museeks
 Icon=/opt/museeks/resources/app/src/images/logos/museeks.png
 Terminal=false
 Type=Application
