--- a/app_new.ini
+++ b/app_new.ini
@@ -12,13 +12,38 @@ RUN_MODE = dev
 ROOT = /srv/gogs/repo
 SCRIPT_TYPE = bash
 ; Default ANSI charset
-ANSI_CHARSET = 
+ANSI_CHARSET =
 ; Force every new repository to be private
 FORCE_PRIVATE = false
 ; Global maximum creation limit of repository per user, -1 means no limit
 MAX_CREATION_LIMIT = -1
-; Patch test queue length, make it as large as possible
-PULL_REQUEST_QUEUE_LENGTH = 10000
+; Mirror sync queue length, increase if mirror syncing starts hanging
+MIRROR_QUEUE_LENGTH = 1000
+; Patch test queue length, increase if pull request patch testing starts hanging
+PULL_REQUEST_QUEUE_LENGTH = 1000
+; Preferred Licenses to place at the top of the List
+; Name must match file name in conf/license or custom/conf/license
+PREFERRED_LICENSES = Apache License 2.0,MIT License
+
+[repository.editor]
+; List of file extensions that should have line wraps in the CodeMirror editor
+; Separate extensions with a comma. To line wrap files w/o extension, just put a comma
+LINE_WRAP_EXTENSIONS = .txt,.md,.markdown,.mdown,.mkd,
+; Valid file modes that have a preview API associated with them, such as api/v1/markdown
+; Separate values by commas. Preview tab in edit mode won't show if the file extension doesn't match
+PREVIEWABLE_FILE_MODES = markdown
+
+[repository.upload]
+; Whether repository file uploads are enabled. Defaults to `true`
+ENABLED = true
+; Path for uploads. Defaults to `data/tmp/uploads` (tmp gets deleted on gogs restart)
+TEMP_PATH = data/tmp/uploads
+; One or more allowed types, e.g. image/jpeg|image/png. Nothing means any file type
+ALLOWED_TYPES =
+; Max size of each file in MB. Defaults to 3MB
+FILE_MAX_SIZE = 3
+; Max number of files per upload. Defaults to 5
+MAX_FILES = 5
 
 [ui]
 ; Number of repositories that are showed in one explore page
@@ -54,6 +79,9 @@ ENABLE_HARD_LINE_BREAK = false
 ; List of custom URL-Schemes that are allowed as links when rendering Markdown
 ; for example git,magnet
 CUSTOM_URL_SCHEMES =
+; List of file extensions that should be rendered/edited as Markdown
+; Separate extensions with a comma. To render files w/o extension as markdown, just put a comma
+FILE_EXTENSIONS = .md,.markdown,.mdown,.mkd
 
 [server]
 PROTOCOL = http
@@ -61,6 +89,8 @@ DOMAIN = localhost
 ROOT_URL = %(PROTOCOL)s://%(DOMAIN)s:%(HTTP_PORT)s/
 HTTP_ADDR = 0.0.0.0
 HTTP_PORT = 3000
+; Permission for unix socket
+UNIX_SOCKET_PERMISSION = 666
 ; Local (DMZ) URL for Gogs workers (such as SSH update) accessing web service.
 ; In most cases you do not need to change the default value.
 ; Alter it only if your SSH server node is not the same as HTTP node.
@@ -156,7 +186,7 @@ ENABLE_REVERSE_PROXY_AUTO_REGISTRATION = false
 ENABLE_CAPTCHA = true
 
 [webhook]
-; Hook task queue length
+; Hook task queue length, increase if webhook shooting starts hanging
 QUEUE_LENGTH = 1000
 ; Deliver timeout in seconds
 DELIVER_TIMEOUT = 5
@@ -212,7 +242,7 @@ PROVIDER = memory
 ; file: session file path, e.g. `data/sessions`
 ; redis: network=tcp,addr=:6379,password=macaron,db=0,pool_size=100,idle_timeout=180
 ; mysql: go-sql-driver/mysql dsn config string, e.g. `root:password@/session_table`
-PROVIDER_CONFIG = /srv/gogs/data/sessions
+PROVIDER_CONFIG = data/sessions
 ; Session cookie name
 COOKIE_NAME = i_like_gogits
 ; If you use session in https only, default is false
@@ -225,14 +255,14 @@ GC_INTERVAL_TIME = 86400
 SESSION_LIFE_TIME = 86400
 
 [picture]
-AVATAR_UPLOAD_PATH = /srv/gogs/data/avatars
+AVATAR_UPLOAD_PATH = data/avatars
 ; Chinese users can choose "duoshuo"
 ; or a custom avatar source, like: http://cn.gravatar.com/avatar/
 GRAVATAR_SOURCE = gravatar
 ; This value will be forced to be true in offline mode.
 DISABLE_GRAVATAR = false
 ; Federated avatar lookup uses DNS to discover avatar associated
-; with emails, see http://www.libravatar.org
+; with emails, see https://www.libravatar.org
 ; This value will be forced to be false in offline mode or Gravatar is disbaled.
 ENABLE_FEDERATED_AVATAR = false
 
@@ -240,7 +270,7 @@ ENABLE_FEDERATED_AVATAR = false
 ; Whether attachments are enabled. Defaults to `true`
 ENABLE = true
 ; Path for attachments. Defaults to `data/attachments`
-PATH = /srv/gogs/data/attachments
+PATH = data/attachments
 ; One or more allowed types, e.g. image/jpeg|image/png
 ALLOWED_TYPES = image/jpeg|image/png
 ; Max size of each file. Defaults to 32MB
@@ -361,7 +391,7 @@ GC = 60
 
 [mirror]
 ; Default interval in hours between each check
-DEFAULT_INTERVAL = 24
+DEFAULT_INTERVAL = 8
 
 [api]
 ; Max number of items will response in a page
