Add addition unit for requiring mysql
This allows the default unit to not require MySQL and thus keep it
minimal. On the other hand, the second one enables easier management
for installations with MySQL.

--- a/opennebula-mysqld.service
+++ b/opennebula-mysqld.service
@@ -1,7 +1,8 @@
 [Unit]
 Description=OpenNebula management
 After=network.target local-fs.target remote-fs.target mysqld.service 
-Conflicts=opennebula-mysqld
+Requires=mysqld.service
+Conflicts=opennebula
 
 [Service]
 User=oneadmin
