port for ethereum classic

--- a/mist-classic.desktop
+++ b/mist-classic.desktop
@@ -1,10 +1,10 @@
 [Desktop Entry]
 Type=Application
 Version=0.4.0
-Name=Mist Browser
+Name=Mist Classic Browser
 Comment=Ethereum wallet for Ether accounts, wallets and smart contracts, including Mist browser
-Path=/usr/share/mist
-Exec=/usr/bin/mist
-Icon=/usr/share/mist/icon.png
+Path=/usr/share/mist-classic
+Exec=/usr/bin/mist-classic
+Icon=/usr/share/mist-classic/icon.png
 Terminal=false
 Categories=Internet;Other;
