--- a/config
+++ b/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 4.7.2-2 Kernel Configuration
+# Linux/x86 4.7.3-1 Kernel Configuration
 #
 # CONFIG_64BIT is not set
 CONFIG_X86_32=y
@@ -3862,10 +3862,10 @@ CONFIG_GENERIC_PINCONF=y
 # CONFIG_PINCTRL_AMD is not set
 # CONFIG_PINCTRL_SINGLE is not set
 CONFIG_PINCTRL_BAYTRAIL=y
-CONFIG_PINCTRL_CHERRYVIEW=m
-CONFIG_PINCTRL_INTEL=m
-CONFIG_PINCTRL_BROXTON=m
-CONFIG_PINCTRL_SUNRISEPOINT=m
+CONFIG_PINCTRL_CHERRYVIEW=y
+CONFIG_PINCTRL_INTEL=y
+CONFIG_PINCTRL_BROXTON=y
+CONFIG_PINCTRL_SUNRISEPOINT=y
 CONFIG_ARCH_WANT_OPTIONAL_GPIOLIB=y
 CONFIG_GPIOLIB=y
 CONFIG_GPIO_DEVRES=y
@@ -3885,7 +3885,7 @@ CONFIG_GPIO_SYSFS=y
 # CONFIG_GPIO_GENERIC_PLATFORM is not set
 # CONFIG_GPIO_GRGPIO is not set
 CONFIG_GPIO_ICH=m
-CONFIG_GPIO_LYNXPOINT=y
+# CONFIG_GPIO_LYNXPOINT is not set
 # CONFIG_GPIO_SYSCON is not set
 # CONFIG_GPIO_VX855 is not set
 # CONFIG_GPIO_XILINX is not set
@@ -3919,7 +3919,7 @@ CONFIG_GPIO_SCH311X=m
 # MFD GPIO expanders
 #
 # CONFIG_GPIO_ARIZONA is not set
-CONFIG_GPIO_CRYSTAL_COVE=y
+# CONFIG_GPIO_CRYSTAL_COVE is not set
 CONFIG_GPIO_CS5535=y
 # CONFIG_GPIO_LP3943 is not set
 # CONFIG_GPIO_TPS65218 is not set
