--- a/config
+++ b/config
@@ -5534,10 +5534,7 @@ CONFIG_SND_SST_IPC_ACPI=m
 CONFIG_SND_SOC_INTEL_SST=m
 CONFIG_SND_SOC_INTEL_SST_ACPI=m
 CONFIG_SND_SOC_INTEL_SST_MATCH=m
-CONFIG_SND_SOC_INTEL_HASWELL=m
-CONFIG_SND_SOC_INTEL_HASWELL_MACH=m
 CONFIG_SND_SOC_INTEL_BXT_RT298_MACH=m
-CONFIG_SND_SOC_INTEL_BROADWELL_MACH=m
 CONFIG_SND_SOC_INTEL_BYTCR_RT5640_MACH=m
 CONFIG_SND_SOC_INTEL_BYTCR_RT5651_MACH=m
 CONFIG_SND_SOC_INTEL_CHT_BSW_RT5672_MACH=m
@@ -6364,8 +6361,8 @@ CONFIG_INTEL_IDMA64=m
 CONFIG_PCH_DMA=m
 # CONFIG_QCOM_HIDMA_MGMT is not set
 # CONFIG_QCOM_HIDMA is not set
-CONFIG_DW_DMAC_CORE=y
-CONFIG_DW_DMAC=y
+CONFIG_DW_DMAC_CORE=m
+CONFIG_DW_DMAC=m
 CONFIG_DW_DMAC_PCI=m
 CONFIG_HSU_DMA=y
 
@@ -6789,7 +6786,7 @@ CONFIG_INTEL_OAKTRAIL=m
 CONFIG_SAMSUNG_Q10=m
 CONFIG_APPLE_GMUX=m
 CONFIG_INTEL_RST=m
-CONFIG_INTEL_SMARTCONNECT=y
+CONFIG_INTEL_SMARTCONNECT=m
 CONFIG_PVPANIC=m
 CONFIG_INTEL_PMC_IPC=m
 CONFIG_SURFACE_PRO3_BUTTON=m
