restore CRYSTAL_COVE and LYNXPOINT

--- a/config
+++ b/config
@@ -3885,7 +3885,7 @@ CONFIG_GPIO_SYSFS=y
 # CONFIG_GPIO_GENERIC_PLATFORM is not set
 # CONFIG_GPIO_GRGPIO is not set
 CONFIG_GPIO_ICH=m
-# CONFIG_GPIO_LYNXPOINT is not set
+CONFIG_GPIO_LYNXPOINT=y
 # CONFIG_GPIO_SYSCON is not set
 # CONFIG_GPIO_VX855 is not set
 # CONFIG_GPIO_XILINX is not set
@@ -3919,7 +3919,7 @@ CONFIG_GPIO_SCH311X=m
 # MFD GPIO expanders
 #
 # CONFIG_GPIO_ARIZONA is not set
-# CONFIG_GPIO_CRYSTAL_COVE is not set
+CONFIG_GPIO_CRYSTAL_COVE=y 
 CONFIG_GPIO_CS5535=y
 # CONFIG_GPIO_LP3943 is not set
 # CONFIG_GPIO_TPS65218 is not set
