Fix issues with desktop file and add bash completion

--- a/ykman-gui.desktop
+++ b/ykman-gui.desktop
@@ -1,9 +1,9 @@
 [Desktop Entry]
 Name=YubiKey Manager
 GenericName=YubiKey Manager
-Comment=Graphical application for configuring a YubiKey.
-Exec=ykman
-Icon=ykman
+Comment=Graphical application for configuring a YubiKey
+Exec=ykman-gui
+Icon=yubikey-manager
 StartupNotify=false
 Terminal=false
 Type=Application
