--- a/cfengine3.service
+++ b/cfengine3.service
@@ -1,7 +1,8 @@
 [Unit]
 Description=CFEngine 3 daemons
+Documentation=https://docs.cfengine.com/lts
+
 After=network.target
-Requires=cf-execd.service cf-monitord.service cf-serverd.service
 
 [Service]
 Type=oneshot
