Fix desktop-file exec path

--- a/freecad.desktop
+++ b/freecad.desktop
@@ -4,7 +4,7 @@ Encoding=UTF-8
 Name=FreeCAD
 Comment=A general purpose 3D CAD modeler
 GenericName=CAD Application
-Exec=/usr/bin/freecad %F
+Exec=/usr/bin/FreeCAD %F
 Path=/usr/share/freecad
 Terminal=false
 Type=Application
