fixing broken build functions, updating to grafana 4.0, adopting this package

--- a/grafana.service
+++ b/grafana.service
@@ -5,8 +5,7 @@ After=network.target
 [Service]
 User=grafana
 Group=grafana
-WorkingDirectory=/usr/share/grafana
-ExecStart=/usr/bin/grafana-server --config=/etc/grafana/grafana.ini
+ExecStart=/usr/bin/grafana-server --config=/etc/grafana/grafana.ini --homepath=/usr/share/grafana
 LimitNOFILE=10000
 TimeoutStopSec=20
 SuccessExitStatus=0 2
